--- a/README.rdoc
+++ b/README.rdoc
@@ -16,7 +16,7 @@ The of the webfrontend is stored in a MongoDB database.
 
 2. Download the BindAdmin source (git clone).
 
-3. Install the needed gems:
+3. Install the needed gems.
 
 4. Start the webfrontend.
 
